quick fix - removed height: auto; for .blurredbackround

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,5 @@ body {
 
     .blurredscreen {
         width: 85%;
-        height: auto;
     }
 }
